--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ echo $playeronline;
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; OverBlast NetWork 2020 - Réalisation de CapybaraPin#1482</p>
+      <p class="text-muted small mb-0">Copyright &copy; OverBlast NetWork 2020 - Réalisation de <a href="https://github.com/CapybaraPin">CapybaraPin</a></p>
     </div>
   </footer>
 
